# mcp-ai-assistant

./: .coverage  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
servers/: __init__.py  csv_server.py  datetime_tools.py  excel_server.py  filesystem.py  github.py  google_sheets.py  pdf_server.py  sqlite_server.py  weather.py
src/: __init__.py  config.py  llm.py  main.py  mcp_manager.py
tests/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_csv_server.py  test_datetime_tools.py  test_excel_server.py  test_filesystem.py  test_github.py  test_google_sheets.py  test_llm.py  test_pdf_server.py  test_sqlite_server.py  test_weather.py
