[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-ai-assistant"
version = "0.1.0"
description = "Personal AI assistant powered by LLM and MCP servers"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "pyjwt>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "fpdf2>=2.7.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.0.0",
    "pymupdf>=1.24.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "servers.*"
disable_error_code = ["misc"]